
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int SSL_extension_supported(unsigned int ext_type)
{
    switch (ext_type) {

    case 151:

    case 147:
    case 130:
    case 144:


    case 142:

    case 141:
    case 137:
    case 143:
    case 136:
    case 135:
    case 134:

    case 132:


    case 131:


    case 133:


    case 128:

    case 146:
    case 129:
    case 145:
    case 138:
    case 149:
    case 148:
    case 150:
    case 139:
    case 140:
        return 1;
    default:
        return 0;
    }
}
